--- a/aztec_wallet/package.json
+++ b/aztec_wallet/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aztec/sdk": "^2.1.97",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@shieldswap/wallet-sdk": "^0.48.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "next": "14.2.6",
