--- a/aztec_wallet/package.json
+++ b/aztec_wallet/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
     "@aztec/bb.js": "^0.50.1",
