--- a/aztec_wallet/package.json
+++ b/aztec_wallet/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@aztec/bb.js": "^0.50.1",
+    "@aztec/sdk": "^2.1.97",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@shieldswap/wallet-sdk": "^0.48.0",
