breaking, but changed

--- a/aztecWallet/package.json
+++ b/aztecWallet/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aztec/accounts": "^0.52.0",
     "@aztec/aztec.js": "^0.51.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@radix-ui/react-label": "^2.1.0",
@@ -17,6 +18,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
+    "@shadcn/ui": "^0.0.4",
     "@shieldswap/wallet-sdk": "^0.51.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
@@ -30,7 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
-    "@types/node": "^22.5.1",
+    "@types/node": "^22.5.2",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
