--- a/aztecWallet/package.json
+++ b/aztecWallet/package.json
@@ -10,14 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@aztec/aztec.js": "^0.51.0",
+    "@aztec/accounts": "0.51.0",
+    "@aztec/circuit-types": "0.51.0",
+    "@aztec/foundation": "0.51.0",
+    "@aztec/noir-contracts": "^0.23.0",
+    "@aztec/noir-contracts.js": "0.51.0",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-scroll-area": "^1.1.0",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
-    "@shieldswap/wallet-sdk": "^0.48.0",
+    "@shieldswap/wallet-sdk": "^0.51.0",
     "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
