--- a/aztecWallet/src/noir_contracts/security_options/Nargo.toml
+++ b/aztecWallet/src/noir_contracts/security_options/Nargo.toml
@@ -6,5 +6,5 @@ compiler_version = ">=0.30.0"
 
 [dependencies]
 aztec = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/aztec-nr/aztec" }
-value_note = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/aztec-nr/value-note"}
-easy_private_state = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/aztec-nr/easy-private-state"}
+authwit = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/aztec-nr/authwit"}
+ecdsa_public_key_note = {path = "../ecdsa_public_key_note"}
