--- a/aztec_bridge/Nargo.toml
+++ b/aztec_bridge/Nargo.toml
@@ -5,3 +5,6 @@ authors = [""]
 compiler_version = ">=0.33.0"
 
 [dependencies]
+aztec = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/aztec-nr/aztec" }
+token_portal_content_hash_lib = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/noir-contracts/contracts/token_portal_content_hash_lib" }
+token = { git="https://github.com/AztecProtocol/aztec-packages/", tag="aztec-packages-v0.53.0", directory="noir-projects/noir-contracts/contracts/token_contract" }
