--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "contract/lib/openzeppelin-contracts"]
 	path = contract/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "contract/l1contract/lib/forge-std"]
+	path = contract/l1contract/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
