--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "contract/l1contract/lib/forge-std"]
 	path = contract/l1contract/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "contracts/l1contract/lib/forge-std"]
+	path = contracts/l1contract/lib/forge-std
+	url = https://github.com/foundry-rs/forge-std
