--- a/contracts/l1contract/foundry.toml
+++ b/contracts/l1contract/foundry.toml
@@ -1,6 +1,6 @@
 [profile.default]
 src = "src"
 out = "out"
-libs = ["lib"]
+libs = ["lib/aztec-l1-contracts/l1-contracts"]
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
