--- a/contracts/l1contract/foundry.toml
+++ b/contracts/l1contract/foundry.toml
@@ -2,5 +2,9 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts/",
+              "aztec-packages/l1-contracts/=lib/aztec-packages/l1-contracts/"
+             ]
+
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
